[package]
name = "signaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures-channel = "0.3.25"
futures-util = "0.3.25"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.15", features = ["full"] }
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
log = "0.4.17"
env_logger = "0.9.1"
rand = "0.8.5"
