[package]
name = "signaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures-channel = "0.3.25"
futures-util = "0.3.25"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.15", features = ["full"] }
tokio-tungstenite = "0.17.2"
log = "0.4.17"
env_logger = "0.9.1"
rand = "0.8.5"
twilio-rs = "0.1.1"
base64 = "0.21.2"
toml = "0.8.8"
clap = { version = "4.4.18", features = ["derive"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
warp = "0.3.6"
argon2 = "0.5.3"
